# QuickLib

./: LICENSE.md  README.md
QuickLib/: CMakeLists.txt
QuickLib/src/: Button.cpp  Button.h  CMakeLists.txt  QuickLib.h  main.cpp
